# serpentine_isg

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  noxfile.py  pyproject.toml
.github/: FEATURE_REQUEST.md  ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/serpentine_isg/: __init__.py  cli.py  serpentine_isg.py
tests/: test_serpentine_isg.py
